// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footerが正しく表示される > invalidなユーザーでログインしている状態 1`] = `
<DocumentFragment>
  <footer>
    <hr
      style="border-top: 2px dashed rgb(187, 187, 187); border-bottom: medium; clear: both;"
    />
    <div>
      <a
        href="https://github.com/syou6162/times_esa"
      >
        times_esa
      </a>
       made by 
      <a
        href="https://twitter.com/syou6162"
      >
        Yasuhisa Yoshida
      </a>
      .
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footerが正しく表示される > validなユーザーでログインしている状態 1`] = `
<DocumentFragment>
  <footer>
    <hr
      style="border-top: 2px dashed rgb(187, 187, 187); border-bottom: medium; clear: both;"
    />
    <div>
      ようこそ valid (
      <img
        alt="valid"
        height="20px"
        src="valid"
        title="valid@example.com"
      />
      valid@example.com) さん!
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Sign-out
    </button>
    <hr
      style="border-top: 2px dashed rgb(187, 187, 187); border-bottom: medium; clear: both;"
    />
    <div>
      <a
        href="https://github.com/syou6162/times_esa"
      >
        times_esa
      </a>
       made by 
      <a
        href="https://twitter.com/syou6162"
      >
        Yasuhisa Yoshida
      </a>
      .
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footerが正しく表示される > サインインしていない状態 1`] = `
<DocumentFragment>
  <footer>
    <hr
      style="border-top: 2px dashed rgb(187, 187, 187); border-bottom: medium; clear: both;"
    />
    <div>
      <a
        href="https://github.com/syou6162/times_esa"
      >
        times_esa
      </a>
       made by 
      <a
        href="https://twitter.com/syou6162"
      >
        Yasuhisa Yoshida
      </a>
      .
    </div>
  </footer>
</DocumentFragment>
`;
